<resources>
    <string name="app_name">DishDash</string>
    <string name="where_every_bite_tells_a_story">Where Every Bite Tells a Story!</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="google_login">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="location_access_message">Enable location access for personalized offers and a better experience.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_your_favourite_food">Explore Your Favourite Food</string>
    <string name="view_menu">View Menu</string>
    <string name="dish_name">Dish Name</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="popular">Popular</string>
    <string name="proceed">Proceed</string>
    <string name="cart">Cart</string>
    <string name="search_hint">What do you want to order?</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="buy_again">Buy Again</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_amount">Total Amount</string>
</resources>